Subindo front-end 2

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@ body{
 	align-items: center;
 	justify-content: center;
 	font-family: 'Arial';
-
+	padding: 0px 15px;
 }
 
 .box_login{
@@ -18,8 +18,8 @@ body{
 }
 
 .box_login .capa{
-	height: 230px;
-	background: url(../img/capa-desktop.png);
+	height: 200px;
+	background: url(../img/capa-mobile.png);
 	background-size: 100% 100%;
 	background-repeat: no-repeat;
 }
@@ -35,7 +35,12 @@ h1{
 form input{
 	margin: 0px 20px;
 	width: calc(100% - 40px);
-	padding: 5px 10px;
+	padding: 10px 15px;
+	border: 0;
+	border-radius: 10px;
+	margin-bottom: 20px;
+	text-align: center;
+	color: #6d4bfc;
 }
 
 form .btn-login{
@@ -43,4 +48,23 @@ form .btn-login{
 	width: calc(100% - 40px);
 	background: #3ceb88;
 	color: #fff;
+	border: 0;
+	padding: 10px 15px;
+	border-radius: 10px;
+	margin-bottom: 20px;
+ }
+
+ .msg_error{
+ 	color:#FF6D6D;
+ 	display: flex;
+ 	justify-content: center;
+  }
+
+  @media (min-width:480px){
+  	.box_login .capa{
+  		height: 230px;
+ 		background: url(../img/capa-desktop.png);
+	 	background-size: 100% 100%;
+		background-repeat: no-repeat;
+  }
 }
