--- a/app/view/login.html
+++ b/app/view/login.html
@@ -16,13 +16,14 @@
 
 		<h1>Faça seu login</h1>
 
-		<form method="POST" action="/login/check">
+		<!-- <form method="POST" action="http://localhost/estudo/login-rc/check"> -->
+		<form method="POST" action="http://localhost/estudo/login-rc/login/check">
 			<input type="email" name="e-mail" placeholder="E-MAIL">
 			<input type="password" name="password" placeholder="SENHA">
 
 
 			<button class="btn-login">LOGAR</button>
-			<span class="msg_error"><i class="fa-solid fa-circle-exclamation" style="font-size:16px; color:#FF6D6D; padding-right: 5px"></i><p>Tentativa Inválida</p></span>
+			<span class="msg_error"><i class="fa-solid fa-circle-exclamation" style="font-size:16px; color:#FF6D6D; padding-right: 5px"></i><p>Tentativa Inválida!</p></span>
 		</form>
 	</div>
 </body>
