--- a/app/view/login.html
+++ b/app/view/login.html
@@ -18,7 +18,7 @@
 
 		<!-- <form method="POST" action="http://localhost/estudo/login-rc/check"> -->
 		<form method="POST" action="http://localhost/estudo/login-rc/login/check">
-			<input type="email" name="e-mail" placeholder="E-MAIL">
+			<input type="email" name="email" placeholder="E-MAIL">
 			<input type="password" name="password" placeholder="SENHA">
 
 
