--- a/app/view/login.html
+++ b/app/view/login.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title></title>
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<link rel="stylesheet" type="text/css" href="http://localhost/estudo/login-rc/assets/css/style.css">
 
 <script src="https://kit.fontawesome.com/59b638ad9f.js" crossorigin="anonymous"></script>
 </head>
@@ -23,7 +23,10 @@
 
 
 			<button class="btn-login">LOGAR</button>
-			<span class="msg_error"><i class="fa-solid fa-circle-exclamation" style="font-size:16px; color:#FF6D6D; padding-right: 5px"></i><p>Tentativa Inválida!</p></span>
+
+			{% if error != '' %}
+				<span class="msg_error"><i class="fa-solid fa-circle-exclamation" style="font-size:16px; color:#FF6D6D; padding-right: 5px"></i><p>Tentativa Inválida!</p></span>
+			{% endif %}
 		</form>
 	</div>
 </body>
